Fix awkward wrapping behavior on mid-width screens

--- a/client/my-sites/plans/current-plan/my-plan-card/style.scss
+++ b/client/my-sites/plans/current-plan/my-plan-card/style.scss
@@ -190,22 +190,31 @@
 	.backup-storage-space__progress-bar-container {
 		align-items: start;
 		row-gap: 8px;
-		column-gap: 16px;
+		column-gap: 32px;
 		margin-block-end: 24px;
 
 		flex-direction: column;
 		@include breakpoint-deprecated( '>1040px' ) {
 			flex-direction: row;
+			row-gap: initial;
+			flex-wrap: wrap;
+			justify-content: space-between;
 		}
 	}
 
 	.backup-storage-space__progress-heading {
+		white-space: nowrap;
 		font-weight: 600;
 	}
 
 	.backup-storage-space__progress-usage-text {
 		text-align: right;
+		white-space: nowrap;
 		color: var( --color-text-subtle );
+
+		@include breakpoint-deprecated( '>1040px' ) {
+			flex: 1 0 100%;
+		}
 	}
 
 	.backup-storage-space__progress-bar {
@@ -215,6 +224,7 @@
 		@include breakpoint-deprecated( '>1040px' ) {
 			align-self: initial;
 			flex: 1 0 100px;
+			max-width: 300px;
 		}
 	}
 }
